# hyperpack

./: .gitignore  Cargo.toml  README.md  build.rs  turbo.json
src/: main.rs  tsconfig.json
src/src/: bundler.rs  cache.rs  chunker.rs  config.rs  depsmanager.rs  format.rs  hotreload.rs  linter.rs  livecompiler.rs  logger.rs  modules.rs  plugin.rs  resolver.rs  sourcemap.rs  tsc.rs  typecheck.rs  wasm.rs
src/src/.webpack/: target.rs  webpack.config.ts
src/src/bundler/: bundler.rs  explicit-minifier.rs  minify.rs  splitter.rs  treeshake.rs
src/src/docs/: docgen.config.json  docgen.rs
