[package]
name = "hyperpack"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
regex = "1"
minify = "1.3.0"
rayon = "1.7"
rand = "0.8.5"
walkdir = "2.3.3"
serde = "1.0.209"
chrono = "0.4.38"
serde_json = "1.0.127"
indicatif = "0.17"
warp = "0.3.7"
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4"
swc_ecmascript = "0.253.0"
swc_common = "0.37.5"
simple_logger = "5.0.0"

[profile.release]
opt-level = 3